membuat web baru

--- a/web.html
+++ b/web.html
@@ -4,11 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portofolio</title>
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
-    <h1>nama </h1>
-    <p>melvin zainul bahtiar</p>
-    <h2>melxin seorang web developemnt dan </h2>
-    <h3>halo hellow world</h3>
+ <header>
+    <img class="img" src="logo.png" alt="">
+    <nav>
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">fortofolio</a></li>
+            <li><a href="#">sertifikat</a></li>
+            <li><a href="#">contact me</a></li>
+        </ul>
+    </nav>
+ </header>
+ <main>
+    <section>
+    <div class="kanan">
+        <img class="blue" src="download.jpg" alt="">
+    </div>
+    <div class="kanan">
+        <h1>melvin zainul bahtiar</h1>
+        <p>web development</p>
+    </div>
+</section>
+    <div class="container">
+        <div class="card">
+            <img class="budi" src="download.jpg" alt="">
+            <div class="card1">
+               <h1>nama</h1>
+               <h5>keterangan produk</h5>
+            </div>
+        </div>
+    </div>
+        <div class="container">
+        <div class="card">
+            <img class="budi" src="download.jpg" alt="">
+            <div class="card1">
+               <h1>nama</h1>
+               <h5>keterangan produk</h5>
+            </div>
+        </div>
+    </div>
+        <div class="container">
+        <div class="card">
+            <img class="budi" src="download.jpg" alt="">
+            <div class="card1">
+               <h1>nama</h1>
+               <h5>keterangan produk</h5>
+            </div>
+        </div>
+    </div>
+        <div class="container">
+        <div class="card">
+            <img class="budi" src="download.jpg" alt="">
+            <div class="card1">
+               <h1>nama</h1>
+               <h5>keterangan produk</h5>
+            </div>
+        </div>
+    </div>
+
+        <div class="container">
+        <div class="card">
+            <img class="budi" src="download.jpg" alt="">
+            <div class="card1">
+               <h1>nama</h1>
+               <h5>keterangan produk</h5>
+            </div>
+        </div>
+    </div>
+ </main>
 </body>
 </html>
