--- a/pesan.html
+++ b/pesan.html
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   
 <head>
-<title>Htmlku.com/buatkamu - Pesan Hanya Untukmu temanku </title>
+<title>Htmlku.com/buatkamu - Pesan Hanya Untukmu teman ku</title>
 <meta name="description" content="HTML Replit Coding">
 <!-- 
   Made with love by feeldream!
@@ -53,7 +53,7 @@
      
      <div><blockquote id='bq' data-text=''>
        
-       <p id="kalimat"><span style="font-size:15px">Aku Punya Pesan<br>Nih buat Kamu teman terabaik aqu</span></p>
+       <p id="kalimat"><span style="font-size:15px">Aku Punya Pesan<br>Nih buat Kamu teman aqu</span></p>
        <p id="kalimatb"></p>
 
        <p id="pesan1">Klik 4 LOVE ini! rara</p>
@@ -64,11 +64,11 @@
          <li id="lv4">❤️</li>
        </div>
 
-       <p id="pesan4" class="sty2b"><b style="font-size:15px">Sehat selalu yaa<br><span class='kuning'>kamu</span> di sana! rara</b></p>
+       <p id="pesan4" class="sty2b"><b style="font-size:15px">Sehat selalu yaa<br><span class='kuning'>kamu</span> di sana! zaenatul hafizah</b></p>
        <p id="pesan5" class="sty2b">Jangan pernah telat makan,<br>apalagi telat beribadah...</p>
-       <p id="pesan6" class="sty2b">Kalo ngerasa hari ini buruk,<br>percayalah semua akan<br>cepat berlalu... teman terabik aqu amin 🤲🤲🤲🤲🤲🤲</p>
-       <p id="pesan7" class="sty2b left"><span class='kuning bold'>Terakhir</span>,<br><br>Semoga tidak ada hal yang membuat <span class='merahmuda'>senyumanmu</span> hilang, dan semoga selalu ada jalan untuk menggapai impian mu  dan semoga proses tidak mengkhianati hasilnya... teman terbaik aqu 🤲🤲🤲🤲🤲🤲</p>
-       <p id="pesan8" class="sty2b left"><b>Semangat yaa teman terabaik aqu</b></p>
+       <p id="pesan6" class="sty2b">Kalo ngerasa hari ini buruk,<br>percayalah semua akan<br>cepat berlalu... teman ku 🤲🤲🤲🤲🤲🤲</p>
+       <p id="pesan7" class="sty2b left"><span class='kuning bold'>Terakhir</span>,<br><br>Semoga tidak ada hal yang membuat <span class='merahmuda'>senyumanmu</span> hilang, dan semoga selalu ada jalan untuk menggapai impian mu  dan semoga proses tidak mengkhianati hasilnya... temanku 🤲🤲🤲🤲🤲🤲</p>
+       <p id="pesan8" class="sty2b left"><b>Semangat yaa teman ku</b></p>
 
        <!-- Tombol Lanjut -->
        <p id="opsL">Klik untuk Lanjut</p>
