--- a/kakak.html
+++ b/kakak.html
@@ -56,7 +56,7 @@
        <p id="kalimat"><span style="font-size:15px">Aku Punya Pesan<br>Nih buat Kamu kakak aqu</span></p>
        <p id="kalimatb"></p>
 
-       <p id="pesan1">Klik 4 LOVE ini! rara</p>
+       <p id="pesan1">Klik 4 LOVE ini! kakak qu</p>
        <div id="kolombaru">
          <li id="lv1">❤️</li>
          <li id="lv2">❤️</li>
